src/objects/Case_Subscription__c.object
<CustomObject>
    <description>Junction object between Case and Subscription</description>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Case Subscriptions</relationshipLabel>
        <relationshipName>Case_Subscriptions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Account_on_Case__c</fullName>
        <label>Account on Case</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Address</label>
        <referenceTo>Address__c</referenceTo>
        <relationshipLabel>Case Subscriptions</relationshipLabel>
        <relationshipName>Case_Subscriptions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Billing_Address_Change_Only__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Value will only be checked if Billing Contact/Address of Subscription is the only update during Change of Billing and Delivery</description>
        <label>Billing Address Change Only</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CASE_Subscription_Legacy_Id__c</fullName>
        <externalId>true</externalId>
        <label>CASE Subscription Legacy Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Case_Record_Type_ID__c</fullName>
        <formula>Case__r.RecordTypeId</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Record Type ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Replacement_Required__c</fullName>
        <formula>Case__r.Replacement_Required__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Replacement Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Case_Within_Cir_Schedule__c</fullName>
        <formula>Case__r.Within_Circulation_Planning_Schedule__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Within Cir Schedule</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Subscriptions (Direct)</relationshipLabel>
        <relationshipName>Case_Subscriptions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Complaint_Copies__c</fullName>
        <label>Complaint Copies</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Complaint_From__c</fullName>
        <label>Complaint From</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Complaint_To__c</fullName>
        <label>Complaint To</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Credit_Amount__c</fullName>
        <label>Credit Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Credit_Copies__c</fullName>
        <formula>IF(NOT(ISNULL(Replacement_Copies__c)), Complaint_Copies__c - Replacement_Copies__c, Complaint_Copies__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Credit Copies</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Goodwill_Amount__c</fullName>
        <label>Goodwill Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Goodwill_Copies__c</fullName>
        <label>Goodwill Copies</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IsNewspaperMagazineDigitalCase__c</fullName>
        <description>D-2130</description>
        <label>IsNewspaperMagazineDigitalCase?</label>
        <picklist>
            <picklistValues>
                <fullName>Digital</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Magazine</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Newspaper</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Issue_No__c</fullName>
        <label>Issue No.</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Case_Team_Member_Added__c</fullName>
        <description>D-1306</description>
        <label>Last Case Team Member Added</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Legacy_Create_By__c</fullName>
        <label>Legacy Create By</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legacy_Create_Date__c</fullName>
        <label>Legacy Create Date</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legacy_Update_By__c</fullName>
        <label>Legacy Update By</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legacy_Update_Date__c</fullName>
        <label>Legacy Update Date</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Month__c</fullName>
        <label>Month</label>
        <picklist>
            <picklistValues>
                <fullName>January</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>February</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>March</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>April</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>May</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>June</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>July</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>August</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>September</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>October</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>November</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>December</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Old_Recipient_Address__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>[KBalaoing 1-15-2016] Added for D-4285</description>
        <label>Old Recipient Address</label>
        <referenceTo>Address__c</referenceTo>
        <relationshipLabel>Case Subscriptions (Old Recipient Address)</relationshipLabel>
        <relationshipName>Case_Subscriptions1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Old_Recipient_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>[KBalaoing 1-15-2016] Added for D-4285</description>
        <label>Old Recipient Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Case Subscriptions</relationshipLabel>
        <relationshipName>Case_Subscriptions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Old_Vendor_Credit__c</fullName>
        <description>Old Vendor Credit amount from subscription record before COA happens.</description>
        <label>Old Vendor Credit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Package_Name__c</fullName>
        <label>Package Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Code__c</fullName>
        <formula>Subscription__r.Product_Code__c</formula>
        <label>Product Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Publication_Code__c</fullName>
        <formula>Subscription__r.Main_Package_1__r.Product_Family_Current_Package__c</formula>
        <label>Publication Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Publication__c</fullName>
        <label>Publication</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Replace_From__c</fullName>
        <label>Replace From</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Replace_To__c</fullName>
        <label>Replace To</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Replacement_Copies__c</fullName>
        <label>Replacement Copies</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Replacement_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Replacement Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sub_Status__c</fullName>
        <formula>TEXT( Case__r.Sub_Status__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sub Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subs_Start_Date_Subs_End_Date__c</fullName>
        <formula>TEXT(DAY(Subscription__r.Zuora__SubscriptionStartDate__c))+&quot;/&quot; +TEXT(MONTH(Subscription__r.Zuora__SubscriptionStartDate__c))+&quot;/&quot; +TEXT(YEAR(Subscription__r.Zuora__SubscriptionStartDate__c)) + &quot;  -  &quot; + TEXT(DAY(Subscription__r.Zuora__SubscriptionEndDate__c))+&quot;/&quot; +TEXT(MONTH(Subscription__r.Zuora__SubscriptionEndDate__c))+&quot;/&quot; +TEXT(YEAR(Subscription__r.Zuora__SubscriptionEndDate__c))</formula>
        <label>Subs Start Date  -  Subs End Date</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subscription_ExtId__c</fullName>
        <label>Subscription ExtId</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subscription_Main_Package_Mapping__c</fullName>
        <formula>Subscription__r.Main_Package_1__r.Name</formula>
        <label>Subscription Main Package</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subscription_Name_Mapping__c</fullName>
        <formula>Subscription__r.Name</formula>
        <label>Subscription Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subscription_Start_Date__c</fullName>
        <formula>Subscription__r.Zuora__SubscriptionStartDate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Subscription Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Subscription__c</fullName>
        <label>Subscription</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>(1 AND 2) OR (1 AND 3 AND 4)</booleanFilter>
            <filterItems>
                <field>Zuora__Subscription__c.Zuora__Account__c</field>
                <operation>equals</operation>
                <valueField>$Source.Account__c</valueField>
            </filterItems>
            <filterItems>
                <field>$Source.isComplaint__c</field>
                <operation>equals</operation>
                <value>False</value>
            </filterItems>
            <filterItems>
                <field>$Source.isComplaint__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <filterItems>
                <field>Zuora__Subscription__c.Subscription_Type_1__c</field>
                <operation>equals</operation>
                <value>Publication</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Zuora__Subscription__c</referenceTo>
        <relationshipLabel>Case Subscriptions</relationshipLabel>
        <relationshipName>Case_Subscriptions</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Vendor_Code__c</fullName>
        <description>Value will update from workflow (Subscription__r.Vendor_1__r.Vendor_Code__c). Vendor ID field is duplicated one</description>
        <label>Vendor Code</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vendor_Debit__c</fullName>
        <formula>IF(Case__r.Vendor_Chargeable_Courier__c = TRUE &amp;&amp; Case__r.Vendor_Chargeable_Paper__c = TRUE, Case__r.Courier_Fee__c + Case__r.Paper_Fee__c, IF(Case__r.Vendor_Chargeable_Courier__c = TRUE &amp;&amp; Case__r.Vendor_Chargeable_Paper__c = FALSE, Case__r.Courier_Fee__c, IF(Case__r.Vendor_Chargeable_Courier__c = FALSE &amp;&amp; Case__r.Vendor_Chargeable_Paper__c = TRUE, Case__r.Paper_Fee__c, NULL)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Vendor Debit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Vendor_ID__c</fullName>
        <formula>Subscription__r.Vendor_1__r.Vendor_Code__c</formula>
        <label>Vendor ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vendor__c</fullName>
        <label>Vendor</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Year__c</fullName>
        <label>Year</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>isComplaint__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used in filtering Subscription field. If true, does not show &apos;Delivery&apos; subscriptions.</description>
        <label>isComplaint</label>
        <type>Checkbox</type>
    </fields>
    <label>Case Subscription</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Subscription__c</columns>
        <columns>Subscription_Name_Mapping__c</columns>
        <columns>Publication_Code__c</columns>
        <columns>Case__c</columns>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Case_Record_Type_ID__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>CS{0000000000}</displayFormat>
        <label>Case Subscription Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Case Subscriptions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>ApprovedRejectedGoodwillNewspaper</fullName>
        <active>true</active>
        <description>D-1951</description>
        <errorConditionFormula>AND(OR(ISPICKVAL(Case__r.Goodwill_Approval_Status__c,&apos;Approved&apos;),ISPICKVAL(Case__r.Goodwill_Approval_Status__c,&apos;Rejected&apos;)), ISCHANGED( Goodwill_Amount__c))</errorConditionFormula>
        <errorMessage>Approved/Rejected Goodwill Amount cannot be updated.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CloseCaseValidation</fullName>
        <active>false</active>
        <description>Case cannot be close if there is a goodwill amount and goodwill approval status is not approved.</description>
        <errorConditionFormula>NOT(ISNULL(Goodwill_Amount__c )) &amp;&amp; NOT( ISPICKVAL( Case__r.Goodwill_Approval_Status__c , &quot;Approved&quot;)) &amp;&amp; ISPICKVAL(  Case__r.Status , &quot;Closed&quot;)</errorConditionFormula>
        <errorMessage>Case cannot be closed if goodwill amount is entered and not approved.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Complaint_Copies_Subscription_Copies</fullName>
        <active>true</active>
        <description>(No. of Copies * No. of Days in Complaint Period)  should be greater or equal to Complaint Copies</description>
        <errorConditionFormula>IF(NOT(ISNULL(Complaint_Copies__c)), Subscription__r.Number_of_Copies__c &lt; Complaint_Copies__c,FALSE)</errorConditionFormula>
        <errorDisplayField>Account__c</errorDisplayField>
        <errorMessage>Complaint copies cannot be greater than the Subscription Copies</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Complaint_Dates_cannot_be_future_dates</fullName>
        <active>true</active>
        <errorConditionFormula>Complaint_From__c &gt; today()  ||  Complaint_To__c &gt; today()</errorConditionFormula>
        <errorMessage>Complaint Dates cannot be greater than today</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Complaint_SubCantBeEditedByCSOAdmin</fullName>
        <active>true</active>
        <description>Subscription field cannot be edited by CSO admin when editing Complaint Cases.</description>
        <errorConditionFormula>AND($Profile.Name = &apos;CSO Admin&apos;,  ISCHANGED( Subscription__c ),  Case__r.RecordType.DeveloperName = &apos;Complaint Magazine&apos; )</errorConditionFormula>
        <errorMessage>CSO Admin cant edit subscription. Please contact CSO.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Complaint_To_Date_Validation</fullName>
        <active>true</active>
        <description>Complaint to date must not be less than Complaint From date</description>
        <errorConditionFormula>Complaint_To__c &lt; Complaint_From__c</errorConditionFormula>
        <errorDisplayField>Complaint_To__c</errorDisplayField>
        <errorMessage>Complaint to date must not be less than Complaint From date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Credit_Copies_cannot_be_negative</fullName>
        <active>true</active>
        <description>Credit Copies = Complaint Copies - Replacement Copies</description>
        <errorConditionFormula>IF(NOT(ISNULL(Replacement_Copies__c)),
Complaint_Copies__c &lt; Replacement_Copies__c,
FALSE
)</errorConditionFormula>
        <errorMessage>Replacement Copies cannot be greater than Complaint Copies</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ReplaceFromDateMustBeFutureDate</fullName>
        <active>false</active>
        <description>Replace to date should not be a past date. Refer to UD-0616</description>
        <errorConditionFormula>Replace_From__c &lt; today()</errorConditionFormula>
        <errorDisplayField>Replace_From__c</errorDisplayField>
        <errorMessage>Replace From Date should not be in the past.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Replace_From_Date_Required</fullName>
        <active>true</active>
        <description>Replace from date must be required if Replace to date has a value.</description>
        <errorConditionFormula>AND(ISBLANK(Replace_From__c), NOT(ISBLANK(Replace_To__c)))</errorConditionFormula>
        <errorDisplayField>Replace_From__c</errorDisplayField>
        <errorMessage>Replace from date must be required if Replace to date has a value.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Replace_To_Date_Required</fullName>
        <active>true</active>
        <description>Replace to date must be required if Replace from date has a value.</description>
        <errorConditionFormula>AND(ISBLANK(Replace_To__c), NOT(ISBLANK(Replace_From__c)))</errorConditionFormula>
        <errorDisplayField>Replace_To__c</errorDisplayField>
        <errorMessage>Replace to date must be required if Replace from date has a value.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Replace_To_Date_Validation</fullName>
        <active>true</active>
        <description>Replace to date must be &gt;= Replace from date</description>
        <errorConditionFormula>Replace_To__c  &lt; Replace_From__c</errorConditionFormula>
        <errorDisplayField>Replace_To__c</errorDisplayField>
        <errorMessage>Replace To Date must not be less than Replace From Date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ReplacementFromDateWithinComplaintPeriod</fullName>
        <active>true</active>
        <errorConditionFormula>((Replace_From__c &gt;  Complaint_To__c &amp;&amp; Replace_From__c &gt; Complaint_From__c) || (Replace_From__c &lt; Complaint_To__c &amp;&amp; Replace_From__c &lt; Complaint_From__c))</errorConditionFormula>
        <errorDisplayField>Replace_From__c</errorDisplayField>
        <errorMessage>Replacement From should be within Complaint Period.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ReplacementFromNotGreaterThan14</fullName>
        <active>false</active>
        <errorConditionFormula>Case__r.Replacement_Required__c &amp;&amp; Replace_From__c &lt; (TODAY()- 14)</errorConditionFormula>
        <errorDisplayField>Replace_From__c</errorDisplayField>
        <errorMessage>Replacement Issue From Date should not be older than  14 days.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ReplacementFromfieldRequired</fullName>
        <active>false</active>
        <description>Check Replacement Issue Date if Replacement is required for Complaint case.</description>
        <errorConditionFormula>ISBLANK(Replace_From__c) &amp;&amp; Case__r.Replacement_Required__c &amp;&amp;  $Profile.Name != &apos;CSO Admin&apos;</errorConditionFormula>
        <errorDisplayField>Replace_From__c</errorDisplayField>
        <errorMessage>Replacement Issue Date is required if Replacement Required checkbox is checked.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ReplacementIssueDateFieldsRequired</fullName>
        <active>true</active>
        <description>Check Replacement Issue Date if Replacement is required for Complaint case.</description>
        <errorConditionFormula>(ISBLANK(Replace_To__c) || ISBLANK(Replace_From__c)) &amp;&amp; Case__r.Replacement_Required__c</errorConditionFormula>
        <errorDisplayField>Account__c</errorDisplayField>
        <errorMessage>Replacement Issue Dates are required if Replacement Required checkbox is checked.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ReplacementReqReplacementCopies</fullName>
        <active>true</active>
        <errorConditionFormula>Case__r.RecordType.Name = &apos;Complaint - Newspaper&apos;
&amp;&amp; 
IF (Case__r.Replacement_Required__c = FALSE, Replacement_Copies__c &lt;&gt; null || Replacement_Copies__c &lt;&gt; 0, FALSE)</errorConditionFormula>
        <errorDisplayField>Account__c</errorDisplayField>
        <errorMessage>Replacement Required checkbox is unchecked, Replacement Copies should be blank or zero.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ReplacementToDateIsNotToday</fullName>
        <active>true</active>
        <errorConditionFormula>((Replace_To__c &gt;  Complaint_To__c &amp;&amp; Replace_To__c &gt; Complaint_From__c) || (Replace_To__c &lt; Complaint_To__c &amp;&amp; Replace_To__c &lt; Complaint_From__c))</errorConditionFormula>
        <errorDisplayField>Replace_To__c</errorDisplayField>
        <errorMessage>Replacement To should be within Complaint Period</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ReplacementTofieldRequired</fullName>
        <active>false</active>
        <description>Check Replacement Issue Date if Replacement is required for Complaint case.</description>
        <errorConditionFormula>ISBLANK(Replace_To__c) &amp;&amp; Case__r.Replacement_Required__c &amp;&amp; $Profile.Name != &apos;CSO Admin&apos;</errorConditionFormula>
        <errorDisplayField>Replace_To__c</errorDisplayField>
        <errorMessage>Replacement Issue Date is required if Replacement Required checkbox is checked.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SubscriptionEdit</fullName>
        <active>true</active>
        <errorConditionFormula>OR($Profile.Name  = &apos;CSO Admin&apos;, CONTAINS($Profile.Name , &apos;Vendor&apos;)) &amp;&amp; ISCHANGED(Subscription__c)</errorConditionFormula>
        <errorMessage>User cannot update subscription.</errorMessage>
    </validationRules>
</CustomObject>